@@ -158,7 +158,7 @@ extern int blocked_link(object *ob, mapstruct *m, int sx, int sy);
 extern int ob_blocked(const object *ob, mapstruct *m, sint16 x, sint16 y);
 extern void fix_container(object *container);
 extern void load_objects(mapstruct *m, FILE *fp, int mapflags);
-extern void save_objects(mapstruct *m, FILE *fp, FILE *fp2, int flag);
+extern int save_objects(mapstruct *m, FILE *fp, FILE *fp2, int flag);
 extern mapstruct *get_linked_map(void);
 extern void allocate_map(mapstruct *m);
 extern mapstruct *get_empty_map(int sizex, int sizey);
@@ -394,4 +394,4 @@ extern int set_variable(object *op, char *buf);
 extern void init_vars(void);
 extern void free_loader(void);
 extern void get_ob_diff(object *op, object *op2, char *buf, int size);
-extern void save_object(FILE *fp, object *op, int flag);
+extern int save_object(FILE *fp, object *op, int flag);
